--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==4.1
 pycryptodome==3.15.0
 djangorestframework==3.14.0
 django-cors-headers==3.13.0
+django-allauth
 python-dotenv
 requests==2.28.1
 django-filter==22.1
